# libkro

./: LICENSE  README.md
src/: CMakeLists.txt  kro.c  kro.h
src/example/: read_example.c  write_example.c
